[project]
name = "seo-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anyio>=4.10.0",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "lxml>=5.2",
    "pandas>=2.3.2",
    "streamlit>=1.48.1",
    "tldextract>=5.3.0",
    "typer[all]>=0.16.1",
]
